<resources>
    <string name="app_name">Budget</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="stats">Stats</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="shopping">Shopping Todo</string>
    <string name="scheduler">Scheduler</string>
    <string name="calculator">Calculator</string>

    <string name="title_activity_add"></string>
    <string name="main_title">Budget Book</string>
    <string name="title_activity_calendar">Calendar</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_recieved">Received</string>
    <string name="title_activity_add_spent">Spent</string>
    <string name="title_activity_todo">Todo List</string>

    <string name="add_name">Name</string>
    <string name="add_amount">Amount</string>
    <string name="add_place_optional">Place (Optional)</string>
    <string name="add_save">Save</string>
    <string name="add_slider_label">Importance:</string>
    <string name="add_spinner_category">Category</string>
    <string name="button_save">Save</string>

    <string name="add_todo">New Todo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_add_todo">AddTodoActivity</string>

    <string name="snack_bar_text_item_removed">1 item removed</string>
    <string name="snack_bar_text_group_item_removed">1 group item removed</string>
    <string name="snack_bar_text_child_item_removed">1 child item removed</string>
    <string name="snack_bar_text_button_clicked">Button clicked! (position = %1$d)</string>
    <string name="snack_bar_action_undo">UNDO</string>

    <string name="dialog_message_item_pinned">Item pinned! (position = %1$d)</string>
    <string name="dialog_message_group_item_pinned">Group item pinned! (group = %1$d)</string>
    <string name="dialog_message_child_item_pinned">Child item pinned! (group = %1$d, child = %2$d)</string>

</resources>
