<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    tools:context=".AlarmDetailsActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" >

        <com.rey.material.widget.EditText
            style="@style/Material.Widget.EditText.Light"
            android:id="@+id/text_name_spent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/myTextPrimaryColorRed"
            android:textColorHint="@color/myTextLightColor"
            android:inputType="text"
            android:hint="@string/add_name"
            app:et_inputId="@+id/text_name_input"
            app:et_supportMode="none" />

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/text_line2"
            android:layout_below="@+id/text_name_spent" >

            <com.rey.material.widget.EditText
                style="@style/Material.Widget.EditText.Light"
                android:id="@+id/text_amount_spent"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:textColor="@color/myTextPrimaryColorRed"
                android:textColorHint="@color/myTextLightColor"
                android:inputType="numberDecimal"
                android:layout_marginRight="20dp"
                android:hint="@string/add_amount"
                app:et_inputId="@+id/text_amount_input"
                app:et_supportMode="none" />

            <com.rey.material.widget.EditText
                style="@style/Material.Widget.EditText.Light"
                android:id="@+id/text_place_optional_spent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:textColor="@color/myTextPrimaryColorRed"
                android:textColorHint="@color/myTextLightColor"
                android:inputType="text"
                android:hint="@string/add_place_optional"
                app:et_inputId="@+id/text_place_optional_input"
                app:et_supportMode="none" />

        </LinearLayout>

        <TextView
            android:layout_below="@+id/text_line2"
            android:id="@+id/add_label_slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textColor="@color/myTextLightColor"
            android:text="@string/add_slider_label"
            android:textSize="14sp" />

        <com.rey.material.widget.Slider
            style="@style/Material.Widget.Slider.Discrete"
            android:id="@+id/slider_spent_importance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_label_slider"
            android:gravity="center"
            android:padding="16dp"
            app:sl_primaryColor="@color/myPrimaryDarkColorRed"
            app:sl_secondaryColor="@color/myPrimaryColorRed"
            app:sl_stepValue="1"
            app:sl_value="50" />

        <com.rey.material.widget.Spinner
            style="@style/Material.Widget.Spinner.Light"
            android:layout_below="@id/slider_spent_importance"
            android:id="@+id/spinner_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="256dp"
            android:padding="16dp"
            android:popupBackground="@color/myBackground"
            app:rd_style="@style/Material.Drawable.Ripple.Wave.Light"
            app:rd_enable="true"
            app:rd_delayClick="none"
            app:spn_labelEnable="true"
            app:spn_label="@string/add_spinner_category"
            app:spn_arrowSwitchMode="true"
            app:spn_arrowAnimDuration="@android:integer/config_shortAnimTime"
            app:spn_arrowInterpolator="@android:anim/decelerate_interpolator"
            app:spn_arrowColor="@color/myTextLightColor" />

        <com.rey.material.widget.Button
            style="@style/MenuItemRippleStyleRed"
            android:layout_below="@id/spinner_category"
            android:id="@+id/add_spent_save"
            android:background="@color/myPrimaryColorRed"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bt_height"
            android:layout_weight="0.4"
            android:textColor="#FFFFFF"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:text="@string/button_save"
            android:layout_marginBottom="16dp" />


    </RelativeLayout>

</ScrollView>

